<resources>
    <string name="app_name">D&amp;Dice</string>
    <string name="roll_title">Press Die to Roll</string>
    <string name="title_activity_roll">RollActivity</string>
    <string name="select_sides">Select # of Sides!</string>
    <string name="button_d4">D4</string>
    <string name="button_d6">D6</string>
    <string name="button_d8">D8</string>
    <string name="button_d10">D10</string>
    <string name="button_d12">D12</string>
    <string name="button_d20">D20</string>
    <string name="button_d100">D100</string>
    <string name="roll_button">Roll Button</string>
    <string name="main_menu_select_dice">Dice</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="choose_sides">Select Die</string>
    <string name="choose_style">Die Colour</string>
    <string name="flip_coin">Flip Coin</string>
    <string name="title_activity_colour_menu">ColourMenu</string>
    <string name="colour_menu_title">Pick Colour</string>
    <string name="title_activity_stats_main_scren">StatsMainScren</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>