<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:padding="@dimen/inner_frame_layout_padding"
        app:layout_boxedEdges="all">

        <TextView
            android:id="@+id/sides_mainmenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:fontFamily="@font/uncial_antiqua"
            android:text="@string/select_sides" />

        <ScrollView
            android:layout_width="152dp"
            android:layout_height="119dp"
            android:layout_gravity="bottom|center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_d4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/uncial_antiqua"
                    android:text="@string/button_d4" />

                <Button
                    android:id="@+id/button_d6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/uncial_antiqua"
                    android:text="@string/button_d6" />

                <Button
                    android:id="@+id/button_d8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/uncial_antiqua"
                    android:text="@string/button_d8" />

                <Button
                    android:id="@+id/button_d10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/uncial_antiqua"
                    android:text="@string/button_d10" />

                <Button
                    android:id="@+id/button_d12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/uncial_antiqua"
                    android:text="@string/button_d12" />

                <Button
                    android:id="@+id/button_d20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/uncial_antiqua"
                    android:text="@string/button_d20" />

                <!-- <Button
                    android:id="@+id/button_d100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/uncial_antiqua"
                    android:text="@string/button_d100" /> -->
            </LinearLayout>
        </ScrollView>

    </FrameLayout>
</androidx.wear.widget.BoxInsetLayout>