<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    android:background="@drawable/background"
    tools:context=".MainMenu"
    tools:deviceIds="wear">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:padding="@dimen/inner_frame_layout_padding"
        app:layout_boxedEdges="all">

        <TextView
            android:id="@+id/mainmenu_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:fontFamily="@font/uncial_antiqua"
            android:text="@string/app_name"
            android:textSize="20sp" />

        <ScrollView
            android:layout_width="152dp"
            android:layout_height="144dp"
            android:layout_gravity="bottom|center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Go to # of sides selection -->
                <Button
                    android:id="@+id/tosidesbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/uncial_antiqua"
                    android:text="@string/choose_sides"
                    android:textColor="@android:color/secondary_text_dark"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/todiestylebutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/uncial_antiqua"
                    android:text="@string/choose_style"
                    android:textColor="@android:color/secondary_text_dark"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/tocoinflipbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/uncial_antiqua"
                    android:text="@string/flip_coin"
                    android:textColor="@android:color/secondary_text_dark"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

    </FrameLayout>
</androidx.wear.widget.BoxInsetLayout>